codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup_configured_key_chords.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Codex server.


› [x] Shell tool  Allow the model to run shell commands.


  space toggle  ctrl+x enter save for next session
